# p2pChat

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  ChatInterface.cpp  ChatInterface.hpp  Findncurses.cmake  GroupChatClient.cpp  GroupChatClient.hpp  GroupChatServer.cpp  GroupChatServer.hpp  P2P.cpp  README.md  SerializableMessagePackage.cpp  SerializableMessagePackage.hpp  chatRX.cpp  chatRX.h  chatTX.cpp  chatTX.h  main.cpp
source/: CMakeLists.txt  ChatInterface.cpp  ChatInterface.hpp  GroupChatClient.cpp  GroupChatClient.hpp  GroupChatServer.cpp  P2P.cpp  P2P.hpp  main.cpp
source/include/: GroupChatServer.hpp  TSQueue.hpp
source/src/: ChatInterface.cpp  GroupChatClient.cpp  GroupChatServer.cpp  SerializableMessagePackage.cpp  main.cpp
